# ansible-lint-plugin

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.config/: requirements.in
.github/.workflows/: build.yml
.github/workflows/: build.yml  release.yml
src/ansible_lint_plugin/: __init__.py  __main__.py  version.py
tests/: test_main.py
